<resources>
    <string name="app_name">Sql Lite App</string>
    <string name="id">Id</string>
    <string name="Name">Name</string>
    <string name="surname">Surname</string>
    <string name="marks">Marks</string>
    <string name="add_data">Add Data</string>
    <string name="view_all">View All</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>